# compyutinator-keyboard

./: .SRCINFO  .gitignore  PKGBUILD  README.md  pyproject.toml  run.py
compyutinator_common/: __init__.py
compyutinator_keyboard/: __init__.py  __main__.py  keyboard_layout.py  keyboard_manager.py  midi_keyboard.py  morse_code.py
compyutinator_transcriber/: __init__.py  backends.py  transcriber.py
share/applications/: compyutinator-transcriber.desktop
